# MyCraft2

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/world/: chunk.hpp  generation.cpp  generation.hpp  mesh.cpp  mesh.hpp  terrain.cpp  terrain.hpp  world.cpp  world.hpp
